--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             </div>
             <div class="cvContent">
-                <a href="img/resume.pdf" target="_blank" class="btn d-CV">Download cv<i class='bx bx-download'></i></a>
+                <a href="cv.pdf" target="_blank" class="btn d-CV">Download cv<i class='bx bx-download'></i></a>
             </div>
         </div>
     </section>
